list decoration, loading animation, fix winner logic, issue: profile pic visible after finishing war

--- a/src/App.scss
+++ b/src/App.scss
@@ -60,26 +60,96 @@ body {
     .card-content {
       transform: skewX(7deg);
       margin: 1.2rem;
-    }
 
-    label {
-      font-size: 0.8rem;
-      color: hsla(255, 255, 255, 0.5);
-    }
-    input {
-      // display: block;
-      margin-top: 0.34rem;
-      background-color: #212423;
-      color: white;
-      border: 1px solid white;
-      border-radius: 4px;
-      padding: 8px 16px;
-      padding-left: 9px;
+      label {
+        font-size: 0.8rem;
+        color: hsla(255, 255, 255, 0.5);
+      }
+      input {
+        // display: block;
+        margin-top: 0.34rem;
+        background-color: #212423;
+        color: white;
+        border: 1px solid white;
+        border-radius: 4px;
+        padding: 8px 16px;
+        padding-left: 9px;
 
-      &:focus {
-        background-color: black;
+        &:focus {
+          background-color: black;
+        }
+
+        + ul {
+          display: block;
+          padding: 0;
+          margin-top: 0;
+          list-style-type: none;
+          width: 59%;
+          border: 1px solid white;
+          border-radius: 2px;
+          li {
+            display: block;
+            text-decoration: none;
+            padding: 12px 12px;
+            background-color: black;
+            // width: 45%;
+            margin-left: 0;
+
+            &:hover {
+              background-color: hsla(255, 255, 255, 0.1);
+            }
+          }
+        }
       }
     }
+  }
+}
+
+.loading {
+  transform: skewX(7deg);
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+
+  .dots .dot {
+    height: 20px;
+    width: 20px;
+    background-color: $green;
+    display: inline-block;
+    margin: 0 5px;
+    border-radius: 2px;
+    transform: skewX(-7deg);
+    animation: showHideDot 2.5s ease-in-out infinite;
+
+    &.one {
+      animation-delay: 0.2s;
+    }
+    &.two {
+      animation-delay: 0.4s;
+    }
+    &.three {
+      animation-delay: 0.6s;
+    }
+    &.four {
+      animation-delay: 0.8s;
+    }
+    &.five {
+      animation-delay: 1s;
+    }
+  }
+}
+@keyframes showHideDot {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
